--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,8 @@
 
 # dependencies
 /node_modules
+/node_modules/.cache
+node_modules/.cache
 /.pnp
 .pnp.js
 
@@ -13,6 +15,7 @@
 
 # misc
 .DS_Store
+**/.DS_Store
 .env.local
 .env.development.local
 .env.test.local
@@ -21,3 +24,4 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+node_modules
